<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".view.MainActivity">

<Spinner
    android:id="@+id/bet_player_name"
    android:layout_width="@dimen/buttonWidthMain"
    android:layout_height="@dimen/buttonHeightMain"
    android:layout_marginTop="@dimen/marginBottomToTop"
    android:spinnerMode="dropdown"
    android:prompt="@string/BetPlayerSelect"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<!--TODO: schöner mit floating action button-->
<EditText
    android:id="@+id/year_select_spinner"
    android:layout_width="@dimen/buttonWidthMain"
    android:layout_height="@dimen/buttonHeightMain"
    android:layout_marginTop="@dimen/field_distance"
    app:layout_constraintTop_toBottomOf="@+id/bet_player_name"
    android:hint="@string/new_player_name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:inputType="textPersonName"
    android:autofillHints="@string/new_player_name_hint" />

<Button
    android:id="@+id/ok_button"
    android:layout_width="@dimen/okButtonWidthMain"
    android:layout_height="@dimen/okButtonHeightMain"
    android:layout_marginBottom="@dimen/last_button_distance_bottom"
    android:text="@string/OK"
    android:textSize="@dimen/default_font_size"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>