<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <Button
        android:id="@+id/show_game_button"
        android:layout_width="@dimen/buttonWidthMain"
        android:layout_height="@dimen/buttonHeightMain"
        android:layout_marginTop="@dimen/marginBottomToTop"
        android:gravity="center"
        android:text="@string/ShowGames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bet_game_button"
        android:layout_width="@dimen/buttonWidthMain"
        android:layout_height="@dimen/buttonHeightMain"
        android:layout_marginTop="@dimen/field_distance"
        app:layout_constraintTop_toBottomOf="@+id/show_game_button"
        android:gravity="center"
        android:text="@string/BetGames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/highScore_button"
        android:layout_width="@dimen/buttonWidthMain"
        android:layout_height="@dimen/buttonHeightMain"
        android:layout_marginTop="@dimen/field_distance"
        app:layout_constraintTop_toBottomOf="@+id/bet_game_button"
        android:gravity="center"
        android:text="@string/HighScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>