<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/header_league_spinner"
        android:layout_width="@dimen/spinnerWidthMain"
        android:layout_height="@dimen/headerHeightMain"
        android:text="@string/LeagueSelect"
        android:textSize="@dimen/default_font_size"
        app:layout_constraintBottom_toTopOf="@+id/league_select_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/league_select_spinner"
        android:layout_width="@dimen/spinnerWidthMain"
        android:layout_height="@dimen/spinnerHeightMain"
        android:layout_marginTop="@dimen/marginBottomToTop"
        android:spinnerMode="dropdown"
        android:prompt="@string/LeagueSelect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_year_spinner"
        android:layout_width="@dimen/spinnerWidthMain"
        android:layout_height="@dimen/headerHeightMain"
        android:text="@string/YearSelect"
        android:textSize="@dimen/default_font_size"
        app:layout_constraintBottom_toTopOf="@+id/year_select_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/year_select_spinner"
        android:layout_width="@dimen/spinnerWidthMain"
        android:layout_height="@dimen/spinnerHeightMain"
        android:layout_marginTop="@dimen/spinner_distance"
        android:prompt="@string/YearSelect"
        app:layout_constraintTop_toBottomOf="@+id/league_select_spinner"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="@dimen/okButtonWidthMain"
        android:layout_height="@dimen/okButtonHeightMain"
        android:layout_marginBottom="@dimen/last_button_distance_bottom"
        android:text="@string/OK"
        android:textSize="@dimen/default_font_size"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="0dp"
        android:layout_height="@dimen/errorHeightMain"
        android:textSize="@dimen/error_message_font_size"
        android:textColor="@color/Red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ok_button" />
</androidx.constraintlayout.widget.ConstraintLayout>